:bug: fix all margin collapsing

--- a/007_form_challenge/styles.css
+++ b/007_form_challenge/styles.css
@@ -11,6 +11,10 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  margin-top: 0;
+}
+
 main {
   background-color: #e8f0fd;
 
@@ -18,7 +22,17 @@ main {
   padding: 1rem;
   border-radius: 4px;
   margin: 0 auto;
-  box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
+}
+
+section {
+  margin: 1.4rem 0;
+}
+
+#contact,
+#terms-section,
+#btn-container {
+  margin-top: 0;
 }
 
 label {
@@ -69,10 +83,6 @@ button:hover {
 
 .form-control-input input {
   width: 1rem;
-}
-
-#terms {
-  margin-top: 0.5rem;
 }
 
 #btn-container {
